--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,37 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
 $primary-color: #70c919;
 $secondary-color: #27ad6c;
+$topic-color: #9b9b9b;
 $hero-image: url(../img/hero.png);
 
 @mixin easeInOut {
   transition: all 0.3s ease-in-out;
+}
+@mixin topic($text-color) {
+  font-size: 48px;
+  color: $text-color;
+  font-weight: 400;
+}
+
+//Media Query Mixins
+@mixin mediaSm {
+  @media screen and (max-width: 560px) {
+    @content;
+  }
+}
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
+  }
 }
