--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -14,6 +14,10 @@ $hero-image: url(../img/hero.png);
   font-weight: 400;
 }
 
+@mixin rotate() {
+  transform: rotate(360deg);
+}
+
 //Media Query Mixins
 @mixin mediaSm {
   @media screen and (max-width: 560px) {
