--- a/scss/_food.scss
+++ b/scss/_food.scss
@@ -16,15 +16,36 @@
     grid-template-columns: repeat(3, 1fr);
     padding: 40px 0 0;
 
-    img {
-      width: 100%;
-      height: 100%;
-      cursor: pointer;
-      @include easeInOut();
+    & > div {
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        @include easeInOut();
+      }
+      .fa-heart {
+        position: absolute;
+        color: #fff;
+        font-size: 32px;
+        opacity: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
+        z-index: 1;
+        transition: 0.5s;
+      }
 
       &:hover {
-        transform: scale(0.8);
-        @include easeInOut();
+        img {
+          transform: scale(0.8);
+          opacity: 0.8;
+          @include easeInOut();
+        }
+        .fa-heart {
+          opacity: 1;
+        }
       }
     }
   }
