--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -24,7 +25,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 50px 60px 0px;
+    padding: 50px 0 20px 20px;
     @include easeInOut();
 
     &.sticky {
@@ -32,24 +33,27 @@ body {
       top: 0;
       left: 0;
       background-color: #333;
-      z-index: 1;
+      z-index: 2;
       height: 100px;
       align-items: center;
       padding: 20px 60px;
     }
 
     nav {
+      position: relative;
       .nav {
         display: flex;
         align-items: center;
         height: 50px;
+        margin-right: 50px;
 
         li {
           list-style: none;
-          padding: 0 20px;
+          padding: 0px 15px;
 
           a {
             color: #fff;
+            opacity: 0.7;
 
             &:hover {
               color: $primary-color;
@@ -57,49 +61,100 @@ body {
             }
           }
         }
+        .search-icon {
+          color: #fff;
+          font-size: 16px;
+
+          // position: absolute;
+          // top: 35%;
+          // right: 5%;
+        }
       }
     }
-    .menu-toggle {
-      display: none;
+    form {
+      position: relative;
 
-      .fa-bars {
+      input {
+        width: 300px;
+        padding: 10px 12px;
+        outline: 0;
+
+        border: 2px solid $primary-color;
+
+        background: rgb(2, 2, 2);
         color: #fff;
-        font-size: 28px;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: 0.5s;
 
-        cursor: pointer;
+        &::placeholder {
+          color: #fff;
+        }
+
+        &.expand {
+          transform: scaleX(1);
+        }
+
+        &.expand ~ .close-icon {
+          display: block;
+        }
+      }
+
+      .close-icon {
+        display: none;
+        color: #fff;
+        font-size: 20px;
+
+        position: absolute;
+        top: 15%;
+        right: 2%;
       }
     }
   }
+  .menu-toggle {
+    display: none;
 
-  .hero-content {
+    .fa-bars {
+      color: #fff;
+      font-size: 28px;
+
+      cursor: pointer;
+    }
+  }
+}
+
+.hero-content {
+  text-align: center;
+  height: 100%;
+
+  h2 {
+    font-size: 5em;
+    font-weight: bold;
+    color: #fff;
+    padding-top: 120px;
+  }
+  p {
+    font-size: 20px;
+    line-height: 1.4;
+    color: #fff;
     text-align: center;
-    height: 100%;
+    width: 45%;
+    transform: translateX(60%);
+    margin: 20px 0 50px;
+    opacity: 0.7;
+  }
+  a {
+    text-transform: uppercase;
+    color: #fff;
 
-    h2 {
-      font-size: 5em;
-      font-weight: bold;
-      color: #fff;
-      padding-top: 120px;
-    }
-    p {
-      font-size: 20px;
-      line-height: 1.4;
-      color: #fff;
-      text-align: center;
-      width: 45%;
-      transform: translateX(60%);
-      margin: 20px 0 50px;
-      opacity: 0.7;
-    }
-    a {
-      text-transform: uppercase;
-      color: #fff;
-
-      i {
-        margin-left: 5px;
-      }
+    i {
+      margin-left: 5px;
     }
   }
+}
+
+.svg-inline--fa {
+  margin-left: 10px;
 }
 
 a {
@@ -108,6 +163,7 @@ a {
 }
 
 .btn-apply {
+  position: relative;
   background: $secondary-color;
   font-size: 16px;
   padding: 16px 20px;
